docs/kubernetes/faces-demo.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: face-route
    namespace: faces
spec:
    parentRefs:
        - name: ingress
          namespace: default
          kind: Gateway
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /face
          filters:
              - type: URLRewrite
                urlRewrite:
                    path:
                        type: ReplacePrefixMatch
                        replacePrefixMatch: /
          backendRefs:
              - name: face
                port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: simple-smiley-route
    namespace: faces
spec:
    parentRefs:
        - kind: Service
          group: ""
          name: smiley
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
    name: color-route
    namespace: faces
spec:
    parentRefs:
        - name: color
          kind: Service
          group: ""
          port: 80
    rules:
        - backendRefs:
              - name: color2
                port: 80
---
